--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.0",
+    "aos": "^2.3.4",
     "firebase": "^11.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.3",
     "tailwindcss": "^4.0.0"
   },
